# darknet-android

./: README.md  build.sh
jni/: Android.mk  CMakeLists.txt  data.c  yolo.c
