cmake_minimum_required(VERSION 3.5)
project(jni)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    activation_layer.c
    activation_layer.h
    activations.c
    activations.h
    art.c
    avgpool_layer.c
    avgpool_layer.h
    batchnorm_layer.c
    batchnorm_layer.h
    blas.c
    blas.h
    box.c
    box.h
    captcha.c
    cifar.c
    classifier.c
    classifier.h
    coco.c
    col2im.c
    col2im.h
    compare.c
    connected_layer.c
    connected_layer.h
    convolutional_layer.c
    convolutional_layer.h
    cost_layer.c
    cost_layer.h
    cpu_gemm.c
    crnn_layer.c
    crnn_layer.h
    crop_layer.c
    crop_layer.h
    cuda.c
    cuda.h
    darknet.c
    data.c
    data.h
    deconvolutional_layer.c
    deconvolutional_layer.h
    demo.c
    demo.h
    detection_layer.c
    detection_layer.h
    dice.c
    dropout_layer.c
    dropout_layer.h
    gemm.c
    gemm.h
    go.c
    gru_layer.c
    gru_layer.h
    im2col.c
    im2col.h
    image.c
    image.h
    imagenet.c
    layer.c
    layer.h
    list.c
    list.h
    local_layer.c
    local_layer.h
    matrix.c
    matrix.h
    maxpool_layer.c
    maxpool_layer.h
    network.c
    network.h
    nightmare.c
    normalization_layer.c
    normalization_layer.h
    option_list.c
    option_list.h
    parser.c
    parser.h
    rnn.c
    rnn_layer.c
    rnn_layer.h
    rnn_vid.c
    route_layer.c
    route_layer.h
    server.c
    server.h
    shortcut_layer.c
    shortcut_layer.h
    softmax_layer.c
    softmax_layer.h
    stb_image.h
    stb_image_write.h
    swag.c
    tag.c
    utils.c
    utils.h
    writing.c
    xnor_layer.c
    xnor_layer.h
    yolo.c)

add_executable(jni ${SOURCE_FILES})